--- a/src/main/resources/Menu.fxml
+++ b/src/main/resources/Menu.fxml
@@ -9,47 +9,61 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.image.Image?>
+<?import javafx.geometry.Insets?>
 <GridPane xmlns="http://javafx.com/javafx"
           xmlns:fx="http://javafx.com/fxml"
           fx:controller="Tetris.Controller"
-          prefHeight="800.0" prefWidth="600.0"
+          prefHeight="850.0" prefWidth="550.0"
           vgap="10" hgap="10"
           alignment="TOP_CENTER"
-            style="-fx-background-image: url('https://cdn5.vectorstock.com/i/1000x1000/43/19/cartoon-vertical-nature-landscape-vector-14794319.jpg'); -fx-background-size: cover">
-    <Label text="GRAN CANARIA TETRIS" textFill="darkslategray" wrapText="true" textAlignment="CENTER" GridPane.columnIndex="0" GridPane.rowIndex="0" GridPane.halignment="CENTER"
-           prefHeight="300" prefWidth="400">
+          style="-fx-background-image: url('images/background.jpg'); -fx-background-position: bottom,center"
+          gridLinesVisible="true">
+    <Label text=" GRAN CANARIA TETRIS"
+           textFill="darkslategray"
+           wrapText="true"
+           textAlignment="CENTER"
+           GridPane.columnIndex="0"
+           GridPane.rowIndex="0"
+           GridPane.halignment="CENTER"
+           GridPane.valignment="BOTTOM"
+           minHeight="200" prefWidth="500">
+        <padding>
+            <Insets top="80"/>
+        </padding>
         <font>
-            <Font size="50" name="AR CHRISTY"/>
+            <Font size="60" name="AR CHRISTY"/>
         </font>
     </Label>
-    <Button text=" Play" GridPane.columnIndex="0" GridPane.rowIndex="1" GridPane.halignment="CENTER">
+    <Label minHeight="150" GridPane.columnIndex="0" GridPane.rowIndex="1"></Label>
+    <Button text=" Play" GridPane.columnIndex="0" GridPane.rowIndex="2" GridPane.halignment="CENTER">
         <font>
             <Font size="30" name="AR CHRISTY"/>
         </font>
         <graphic>
             <ImageView>
-                <Image url="https://img.icons8.com/doodle/48/000000/circled-play.png"/>
+                <Image url="images/play.png"/>
             </ImageView>
         </graphic>
     </Button>
-    <Button text=" High Scores" GridPane.columnIndex="0" GridPane.rowIndex="2" GridPane.halignment="CENTER">
+    <Button fx:id="highScoresButton" text=" High Scores" GridPane.columnIndex="0" GridPane.rowIndex="3" GridPane.halignment="CENTER"
+                onAction="#showScores">
         <font>
             <Font size="30" name="AR CHRISTY"/>
         </font>
         <graphic>
             <ImageView>
-                <Image url="https://img.icons8.com/doodle/48/000000/trophy--v2.png"/>
+                <Image url="images/trophy.png"/>
             </ImageView>
         </graphic>
     </Button>
-    <Button fx:id="creditsButton" text=" Credits" GridPane.columnIndex="0" GridPane.rowIndex="3" GridPane.halignment="CENTER"
+    <Button fx:id="creditsButton" text=" Credits" GridPane.columnIndex="0" GridPane.rowIndex="4" GridPane.halignment="CENTER"
                 onAction="#showCredits">
         <font>
             <Font size="30" name="AR CHRISTY"/>
         </font>
         <graphic>
             <ImageView>
-                <Image url="https://img.icons8.com/doodle/48/000000/horseshoe--v2.png"/>
+                <Image url="images/credits.png"/>
             </ImageView>
         </graphic>
     </Button>
