--- a/src/main/resources/HighScores.fxml
+++ b/src/main/resources/HighScores.fxml
@@ -17,7 +17,7 @@
           vgap="10" hgap="10"
           alignment="TOP_CENTER"
           style="-fx-background-image: url('images/background.jpg'); -fx-background-position: bottom,center"
-          gridLinesVisible="true">
+          gridLinesVisible="false">
     <Label text=" GRAN CANARIA TETRIS"
            textFill="darkslategray"
            wrapText="true"
@@ -34,12 +34,38 @@
             <Font size="60" name="AR CHRISTY"/>
         </font>
     </Label>
-    <Label minHeight="150" GridPane.columnIndex="0" GridPane.rowIndex="1"></Label>
+    <Label  GridPane.columnIndex="0" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.rowSpan="2">
+        <graphic>
+            <ImageView>
+                <Image url="images/board.png" requestedHeight="490" preserveRatio="true"/>
+            </ImageView>
+        </graphic>
+    </Label>
+    <Label text="High Scores List:" minHeight="70" GridPane.columnIndex="0" GridPane.rowIndex="1"
+           textFill="darkslategray"
+           GridPane.halignment="CENTER">
+        <padding>
+            <Insets top="30"/>
+        </padding>
+        <font>
+            <Font size="30" name="AR CHRISTY"/>
+        </font>
+    </Label>
+
+    <Label fx:id="highScores" minHeight="420" GridPane.columnIndex="0" GridPane.rowIndex="2" GridPane.halignment="CENTER" textFill="darkslategray">
+        <padding>
+            <Insets bottom="30"/>
+        </padding>
+        <font>
+            <Font size="24" name="AR CHRISTY"/>
+        </font>
+    </Label>
     <Button fx:id="backButton"
             text=" Back"
             GridPane.columnIndex="0"
-            GridPane.rowIndex="2"
-            GridPane.halignment="CENTER"
+            GridPane.rowIndex="3"
+            GridPane.halignment="RIGHT"
+            GridPane.valignment="BOTTOM"
             onAction="#onButtonClick">
         <font>
             <Font size="30" name="AR CHRISTY"/>
