--- a/src/main/resources/Play.fxml
+++ b/src/main/resources/Play.fxml
@@ -14,11 +14,11 @@
 <?import javafx.scene.canvas.Canvas?>
 <GridPane xmlns="http://javafx.com/javafx"
           xmlns:fx="http://javafx.com/fxml"
-          fx:controller="Tetris.Controller"
+          fx:controller="Controlers.PlayController"
           prefHeight="850.0" prefWidth="550.0"
           vgap="10" hgap="10"
           style="-fx-background-image: url('images/background.jpg'); -fx-background-position: bottom,center"
-          gridLinesVisible="false">
+          gridLinesVisible="true">
     <Label text=" GRAN CANARIA TETRIS"
            textFill="darkslategray"
            wrapText="true"
@@ -52,7 +52,7 @@
         <padding>
             <Insets top="40" left="50"/>
         </padding>
-        <Canvas fx:id="canvas" GridPane.columnIndex="0" GridPane.rowIndex="0" width="200" height="200" GridPane.columnSpan="10" GridPane.rowSpan="21"/>
+        <Canvas fx:id="canvas" GridPane.columnIndex="0" GridPane.rowIndex="0" width="300" height="630" GridPane.columnSpan="10" GridPane.rowSpan="21" GridPane.halignment="LEFT" GridPane.valignment="TOP"/>
     </GridPane>
     <Label text="SCORE"  maxWidth="200" GridPane.columnIndex="1" GridPane.rowIndex="1" alignment="TOP_LEFT" GridPane.valignment="TOP" GridPane.halignment="RIGHT">
         <padding>
