--- a/src/main/resources/SaveScore.fxml
+++ b/src/main/resources/SaveScore.fxml
@@ -95,6 +95,8 @@
         </font>
     </TextField>
     <Button text="Save score"
+            fx:id="saveButton"
+            onAction="#onButtonClick"
             GridPane.columnIndex="0"
             GridPane.rowIndex="5"
             GridPane.halignment="CENTER"
